add correct nginx

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,10 +1,10 @@
-server {
-    listen 80 default_server;
-    location /uploads/ {
-        root    /home/user/web/;
-    }
-    location  ~ \.\w\w\w$ {
-        root    /home/user/web/public/;
-    }
-    #
-}
+server {                                                                        
+    listen 80 default_server;                                                   
+    location ^~ /uploads/ {                                                     
+        root    /home/box/web/;                                                 
+    }                                                                           
+    location ~* ^.+\.\w+$ {                                                     
+        root    /home/box/web/public/;                                          
+    }                                                                           
+    #                                                                           
+} 
